--- a/templates/Home/dayprono.html.twig
+++ b/templates/Home/dayprono.html.twig
@@ -14,26 +14,27 @@
     <h2> Pronostic du jour </h2>
 
     <hr class="separator">
+    {% set test = 0 %}
     {% for j in jeu %}
         <ul>
-            <li>
+            {% if test < 5 %}
+                <li>
 
-                <p class="detailMatch"> {{ j.heure|date('H:i:s') }} {{ j.date|date('Y-m-d') }} à {{ j.Lieu }}</p>
-                <p class="teamMatch"> {{ j.getIdEquipe1().NomEquipe }} -- {{ j.getIdEquipe2().NomEquipe }} </p>
-                <div class="result">
-                    <button class="activeButton"> 1 </button>
-                    <button class="otherButton" disabled> N </button>
-                    <button class="otherButton" disabled> 2 </button>
-                </div>
+                    <p class="detailMatch"> {{ j.heure|date('H:i:s') }} {{ j.date|date('Y-m-d') }} à {{ j.Lieu }}</p>
+                    <p class="teamMatch"> {{ j.equipes.first().NomEquipe }} -- {{ j.equipes.last().NomEquipe }} </p>
+                    <div class="result">
+                        <button class="activeButton"> 1 </button>
+                        <button class="otherButton" disabled> N </button>
+                        <button class="otherButton" disabled> 2 </button>
+                    </div>
 
-                <div class="cote">
-                    <span class="activeCote">1.30</span>
-                    <span class="otherCote">3.40</span>
-                    <span class="otherCote">3.75</span> </div>
-            </li>
-
-
+                    <div class="cote">
+                        <span class="activeCote">1.30</span>
+                        <span class="otherCote">3.40</span>
+                        <span class="otherCote">3.75</span> </div>
+                </li>
+            {% endif %}
+            {% set test = test + 1 %}
         </ul>
     {% endfor %}
-
 {% endblock %}
