mise à jour des controlleurs

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,8 +14,8 @@
 
 <header>
     <div id="banner">
-        <img src="images/banner.jpg" alt="banniere" width="100%" height="250px">
-        <p id="baniere">Pronostiquez pour vos meilleurs équipes</p>
+        <img src="images/banner.jpg" alt="banniere" width=100% height=250px>
+        <p id="baniere">Pronostiquez pour vos meilleures équipes</p>
     </div>
 
     <ul class="ulMenu">
@@ -38,7 +38,7 @@
 
     {%  block register %}{% endblock %}
 
-    <h4 id="topUser"> Les top 5 utilisateurs</h4>
+    <h4 id="topUser"> Le Top 5 </h4>
     {%  set n = 0  %}
 
     <ul class="ulFirstUser">
