--- a/public/CSS/classement.css
+++ b/public/CSS/classement.css
@@ -7,12 +7,16 @@ table {
     border-width:1px;
     border-style:solid;
     border-color:blue;
-    width:50%;
+    width:60%;
     margin: auto;
+    padding-top: 50px;
 }
+
+
 
 table tr:nth-child(2n){
     background-color:gray;
+
 }
 .entete {
     background-color:gray;
@@ -35,4 +39,8 @@ td ,th{
 }
 .third{
     padding-top: 24px;
+}
+
+.pagination{
+    padding-left: 100px;
 }
