--- a/templates/Classement/ClassementClub.html.twig
+++ b/templates/Classement/ClassementClub.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ parent() }}
+
     <div class="search">
         {{ form_start(form) }}
         <div class="first">{{ form_row(form.Pays) }}</div>
@@ -19,7 +19,7 @@
         {{ form_end(form) }}
     </div>
 
-    <div class="container mt-4">
+    <div class="contenair">
         <h1> Classement Actuel Des Clubs </h1>
         <table class="table table-striped">
             <thead>
