--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -42,15 +42,11 @@ Nextipster
 
             <ul class="ulMatch">
                 <li class="headerMatch"> Champions League </li>
-                <li class="match"><a href= "{{ path('Analyse') }}"> <span class="time">18:55</span> <span class="team">Paris - Réal</span>  <span class="nbAvis"> 5 Avis </span> </a></li>
-                <li class="match"><a href= "{{ path('Analyse') }}">  <span class="time">14:00</span>  <span class="team"> Barça - Juventus </span>  </a> </li>
+                {% for i in 0..match|length-2 %}
+                <li class="match"><a href= "{{ path('Analyse') }}"> <span class="time">18:55</span> <span class="team">{{ match[i].NomEquipe }} -  {{  match[i+1].NomEquipe }}</span> </a></li>
+                {% endfor %}
             </ul>
 
-            <ul class="ulMatch">
-                <li class="headerMatch"> Ligue 1 </li>
-                <li class="match"><a> <span class="time">18:55</span> <span class="team">Paris - Réal</span>  <span class="nbAvis"> 5 Avis </span> </a></li>
-                <li class="match"><a>  <span class="time">14:00</span>  <span class="team"> Barça - Juventus </span>  </a> </li>
-            </ul>
 
     </div>
     <script>
