affichage de la page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
 
     {%  block register %}{% endblock %}
 
-    <h4 id="topUser"> Le Top 5 </h4>
+    <h4 id="topUser"> Les Top 5 Utilisateurs </h4>
     {%  set n = 0  %}
 
     <ul class="ulFirstUser">
