--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -2,11 +2,11 @@
 
     position: absolute;
     top:-59px;
-    left: 100px;
-    color: #263238;
-    font-size: 50px;
+    left: 90px;
+    color: blue;
+    font-size: 45px;
     font-family: Helvetica;
-    font-weight: 900;
+    font-weight: 800;
 }
 .ulMenu {
     border: solid 1px black;
