--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -22,17 +22,17 @@ Nextipster
 
         <div class="mySlides fade">
             <img src="images/30d4b.jpg" style="width:50%; height: 200px; margin-left: 180px; margin-top: 10px;">
-            <div class="text"> <a href="#"> ENTRE LYON ET SON PUBLIC</a></div>
+            <div class="text"> <a href="{{ path('news1') }}"> ENTRE LYON ET SON PUBLIC</a></div>
         </div>
 
         <div class="mySlides fade">
             <img src="images/b58a6.jpg" style="width:50%; height: 200px; margin-left: 180px; margin-top: 10px;">
-            <div class="text"><a href="#"> LES VERRES ARRACHENT UN POINT </a></div>
+            <div class="text"><a href="{{ path('news2') }}"> LES VERRES ARRACHENT UN POINT </a></div>
         </div>
 
         <div class="mySlides fade">
             <img src="images/fc834.jpg" style="width:50%; height: 200px; margin-left: 180px; margin-top: 10px;">
-            <div class="text"><a href="#" class="text"> MERCADAL : " TOUJOURS EN VIE "</a></div>
+            <div class="text"><a href="{{ path('news2') }}" class="text"> MERCADAL : " TOUJOURS EN VIE "</a></div>
         </div>
 
     </div>
