--- a/templates/Utilisateur/myProfile.html.twig
+++ b/templates/Utilisateur/myProfile.html.twig
@@ -1,13 +1,15 @@
-{% extends 'base.html.twig' %}
+{%  extends "base.html.twig" %}
 
 {% block title  %}
     Mon profil
 {% endblock %}
 
+{%  block stylesheets %}
+    {{ parent() }}
+{% endblock %}
+
 {%  block body %}
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 
     <br><br>
     <center>
