--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
 
 <header>
     <div id="banner">
-        <img src="images/banner.jpg" alt="banniere" width=100% height=250px>
+        <img src="{{ asset('images/banner.jpg') }}" alt="banniere" width=100% height=250px>
         <p id="baniere">Pronostiquez pour vos meilleures équipes</p>
     </div>
 
