--- a/templates/News/news2.html.twig
+++ b/templates/News/news2.html.twig
@@ -1,25 +1,16 @@
-{%  extends "base2.html.twig" %}
+{%  extends "base.html.twig" %}
 
 {% block title  %}
-   Les verres
+    Les verres
 {% endblock %}
 
 {%  block stylesheets %}
-   {{ parent() }}
+    {{ parent() }}
 {% endblock %}
-
-
-
-{% block titleForm %} Login {% endblock %}
-{% block form %}{{form(form)}} {% endblock %}
-{% block register %} <button><a href="/register">S'inscrire</a></button> {% endblock %}
-
-
-
 {%  block body %}
-<div style="text-align: center; width: 50%;">
+<div style="text-align: center; width: 100%; padding-top: 20px;">
    <h1 style="color: blue;">Amiens - Saint-Étienne : 2-2</h1>
-   <img src="images/b58a6.jpg" style="width:50%; height: 200px; margin-left: 180px; margin-top: 10px;">
+   <img src="{{ asset('images/b58a6.jpg') }}" style="width:50%; height: 200px; margin-left: 20px; margin-top: 10px;">
   <p> Après les défaites de Marseille à Bordeaux vendredi (0-2) et de Lyon contre Dijon samedi après-midi (1-3),
    Saint-Étienne avait l'occasion de conforter sa quatrième place, de distancer l'OM et de se rapprocher de Lyon.
    Avec le retour de Khazri, les Verts, après une bonne intervention de Gurtner devant Beric, ont pris les devants grâce
