--- a/templates/News/news3.html.twig
+++ b/templates/News/news3.html.twig
@@ -1,25 +1,17 @@
-{%  extends "base3.html.twig" %}
+{%  extends "base.html.twig" %}
 
 {% block title  %}
-   Fabien Mercadal
+   Les verres
 {% endblock %}
 
 {%  block stylesheets %}
    {{ parent() }}
 {% endblock %}
 
-
-
-{% block titleForm %} Login {% endblock %}
-{% block form %}{{form(form)}} {% endblock %}
-{% block register %} <button><a href="/register">S'inscrire</a></button> {% endblock %}
-
-
-
 {%  block body %}
-<div style="text-align: center; width: 50%;color: blue;">
+<div style="text-align: center; width: 100%;color: blue;">
    <h1 style="color: blue;">Fabien Mercadal (Caen) : «On est toujours en vie»</h1>
-   <img src="images/fc834.jpg" style="width:50%; height: 200px; margin-left: 180px; margin-top: 10px;">
+   <img src="{{ asset('images/fc834.jpg') }}" style="width:50%; height: 200px; margin-left: 10px; margin-top: 10px;">
    <p>
       Fabien Mercadal (entraîneur Caen, battu 2-0 à Nîmes) : « On voulait faire un match solide.
       On a presque réussi notre coup avant de craquer... un peu trop tard à cinq minutes de la fin.
