--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,9 @@
 
 <div class = "leftLogin">
     <h4> {% block titleForm %} {%  endblock %} </h4>
-    {% block form %} {% endblock %}
+    {% block form %}
+
+    {% endblock %}
 
     {%  block register %}{% endblock %}
 
