--- a/templates/Analyse/Analyse.html.twig
+++ b/templates/Analyse/Analyse.html.twig
@@ -16,7 +16,7 @@
         <ul>
             <li>
                 <p class="detailMatch"> 17:30 à Parc des princes</p>
-                <p class="teamMatch"> Paris Saint Germains - Olympique Lyonnais </p>
+                <p class="teamMatch">  {{  equipe1.NomEquipe }} - {{ equipe2.NomEquipe }} </p>
                 <div class="result">
                     <button class="activeButton"> 1 </button>
                     <button class="otherButton" disabled> N </button>
