--- a/templates/Home/dayprono.html.twig
+++ b/templates/Home/dayprono.html.twig
@@ -10,14 +10,13 @@
 {% endblock %}
 
 {%  block body %}
-
+<div style="text-align: center; width: 100%; padding-top: 20px;">
     <h2> Pronostic du jour </h2>
 
-    <hr class="separator">
+
     {% for j in jeu %}
         <ul>
             <li>
-
                 <p class="detailMatch"> {{ j.heure|date('H:i:s') }} {{ j.date|date('Y-m-d') }} à {{ j.Lieu }}</p>
                 <p class="teamMatch"> {{ j.getIdEquipe1().NomEquipe }} -- {{ j.getIdEquipe2().NomEquipe }} </p>
                 <div class="result">
@@ -35,5 +34,5 @@
 
         </ul>
     {% endfor %}
-
+</div>
 {% endblock %}
