--- a/templates/Analyse/Analyse.html.twig
+++ b/templates/Analyse/Analyse.html.twig
@@ -10,8 +10,9 @@
 {% endblock %}
 
     {%  block body %}
+        <div style="text-align: center; width: 100%; padding-top: 20px;">
+        <div>
         <h2> ANALYSE DE MATCH</h2>
-        <hr class="separator">
 
         <ul>
             <li>
@@ -33,25 +34,7 @@
 
 
 
-        <div class="stade">
-            <img src="" alt="stade">
-        </div>
-        <h3> Classement Actuel Des Clubs </h3>
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th> Numéros </th>
-                <th> Clubs </th>
-                <th> Points </th>
-                <th> Joués </th>
-                <th> Gagnés </th>²
-                <th> Nuls </th>
-                <th> Perdus </th>
 
-            </tr>
-            </thead>
-
-        </table>
         </div>
         <h3> Forme </h3>
         <div class="Forme">
@@ -142,115 +125,7 @@
 
 
         </div>
-        <h3> Face à Face </h3>
-        <div class="Face">
-            <table id="face">
-                <tr>
-                    <th>team2</th>
-                    <th>pt</th>
-                    <th>pt</th>
-                    <th>pt</th>
-                    <th>pt</th>
 
-                </tr>
-                <tr>
-                    <td>team2</td>
-                    <td>pt</td>
-                    <td>pt</td>
-                    <td>pt</td>
-                    <td>pt</td>
-
-                </tr>
-                <tr>
-                    <td>team2</td>
-                    <td>pt</td>
-                    <td>pt</td>
-                    <td>pt</td>
-                    <td>pt</td>
-
-                </tr>
-                <tr>
-                    <td>team2</td>
-                    <td>pt</td>
-                    <td>pt</td>
-                    <td>pt</td>
-                    <td>pt</td>
-
-                </tr>
-                <tr>
-                    <td>team2</td>
-                    <td>pt</td>
-                    <td>pt</td>
-                    <td>pt</td>
-                    <td>pt</td>
-
-                </tr>
-            </table>
-
-        </div>
-        <h3> Statique generale </h3>
-        <div class="Statistique">
-            <table id="team1"><tr>
-                    <th>team1</th>
-                    <th>pt</th>
-
-
-                </tr>
-                <tr>
-                    <td>team1</td>
-                    <td>pt</td>
-
-
-                </tr>
-                <tr>
-                    <td>team1</td>
-                    <td>pt</td>
-
-
-                </tr>
-                <tr>
-                    <td>team1</td>
-                    <td>pt</td>
-
-
-                </tr>
-                <tr>
-                    <td>team1</td>
-                    <td>pt</td>
-
-
-                </tr>
-            </table>
-            <table id="team2">
-                <tr>
-                    <th>team2</th>
-                    <th>pt</th>
-                </tr>
-                <tr>
-                    <td>team2</td>
-                    <td>pt</td>
-
-
-                </tr>
-                <tr>
-                    <td>team2</td>
-                    <td>pt</td>
-
-
-                </tr>
-                <tr>
-                    <td>team2</td>
-                    <td>pt</td>
-
-
-                </tr>
-                <tr>
-                    <td>team2</td>
-                    <td>pt</td>
-
-
-                </tr>
-            </table>
         </div>
 
 
